--- a/css/app.css
+++ b/css/app.css
@@ -1,12 +1,24 @@
 @media print {
-	table {
-		page-break-after: always;
+	#glossar {
+		page-break-before: always;
 	}
 	tr, td {
 		page-break-inside: avoid;
 	}
+	body {
+		font-size: 8px;
+	}
+	a:visited {
+		text-decoration: none;
+	}
 }
 
+ul {
+	padding-left: 1em;
+}
+ol {
+	padding-left: 1.5em;
+}
 body {
 	padding: 0px 10px;
 }
