--- a/app/views/templates/list.jade
+++ b/app/views/templates/list.jade
@@ -71,7 +71,7 @@ table.table.table-condensed
 							= story.points
 							if story.sprint && !story.extra
 								br
-								= (story.points * 100 / sprintStoryPoints[story.sprint]).toFixed(1) + '%'
+								= (story.points * 100 / sprints.get[story.sprint]).toFixed(1) + '%'
 						else if story.estPoints
 							span.nonbinding(title="unverb. Schätzung")
 								| (
@@ -80,8 +80,9 @@ table.table.table-condensed
 					td
 						if story.priority
 							= story.priority
-							if storiesPerPriority[story.priority].length > 1 
-								span.text-danger(title="Folgende User Stories haben die gleiche Priorität: #" + storiesPerPriority[story.priority].join(', #'))
+							= story.priorityDuplicates
+							if story.priorityDuplicates.length > 0
+								span.text-danger(title="Folgende User Stories haben die gleiche Priorität: #" + story.priorityDuplicates.join(', #'))
 									span.glyphicon.glyphicon-warning-sign
 					td
 						- var title = "";
