--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -5,6 +5,8 @@ html(lang='en')
 		meta(name='viewport', content='width=device-width, initial-scale=1')
 		meta(name='google', content='notranslate')
 		title Backlog.js
+		link(rel='shortcut icon', sizes='32x32', href='/images/icon-32.png')
+		link(rel='shortcut icon', sizes='128x128', href='/images/icon-128.png')
 		link(rel='stylesheet', href='css/app.css')
 		script(defer, src='backlog.js')
 		script(defer, src='js/vendor.js')
