Finally added Chaplin.js

--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -10,5 +10,5 @@ html(lang='en')
 		link(rel='stylesheet', href='css/app.css')
 		script(defer, src='backlog.js')
 		script(defer, src='js/vendor.js')
-		script(defer, src='js/app.js', onload='require("application")')
+		script(defer, src='js/app.js', onload='require("initialize")')
 	body
