Better layout for header, implemented real save.

--- a/app/views/styles/app.styl
+++ b/app/views/styles/app.styl
@@ -1,5 +1,5 @@
 @media print
-	#glossar 
+	#glossary
 		page-break-before always
 
 	tr, td
@@ -7,22 +7,22 @@
 
 	body
 		font-size 8px
-		padding 0px 10px
 
 	a:visited
 		text-decoration none
-
 
 	tr.newsprint
 		td
 			border-top 1px solid #000 !important
 
-#sidebar > *
-	display inline-block
+.navbar-brand
+	img
+		height 18px
+		margin 3px
 
-ul
-	padding-left 1em
+#backlog
+	ul
+		padding-left 1em
 
-ol
-	padding-left 1.5em
-
+	ol
+		padding-left 1.5em
