--- a/app/views/templates/header.jade
+++ b/app/views/templates/header.jade
@@ -1,15 +1,26 @@
-.container-fluid
-	.navbar-header
-		a.navbar-brand(href='#') Name
+nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
+	.container-fluid
+		.navbar-header
+			a.navbar-brand(href='/')
+				img(src="images/icon-32.png", alt="Icon")
+				= name
 
-	ul.nav.navbar-nav.navbar-left
-		li.active
-			a(href='#') Backlog
-		li
-			a(href='#') Glossary
+		.navbar-collapse.collapse
+			button#save.btn.btn-default.navbar-btn.navbar-left(type='button')
+				span.glyphicon.glyphicon-floppy-save
 
-	button.btn.btn-default.navbar-btn(type='button') Save
+			ul.nav.navbar-nav.navbar-right
+				li.dropdown
+					a.dropdown-toggle(data-toggle="dropdown", href='#')
+						| Sprints
+						b.caret
+					ul.dropdown-menu
+						for sprint in sprints
+							li: a(href='#')
+								| Sprint 
+								= sprint.id
+				li
+					a(href='#glossary') Glossar
 
-	form.navbar-form.navbar-right(role='search')
-		.form-group
-			input.form-control(type='text', placeholder='Search')
+			form.navbar-form.navbar-right(role='search')
+				input.form-control(type='text', placeholder='Suche...')
