--- a/app/views/templates/header.jade
+++ b/app/views/templates/header.jade
@@ -1,11 +1,15 @@
 nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
 	.container-fluid
 		.navbar-header
+			button.navbar-toggle(type="button" data-toggle="collapse" data-target="#navbar-collapse-1")
+				span.icon-bar
+				span.icon-bar
+				span.icon-bar
 			a.navbar-brand(href='/')
 				img(src="images/icon-32.png", alt="Icon")
 				= name
 
-		.navbar-collapse.collapse
+		#navbar-collapse-1.navbar-collapse.collapse
 			button#save.btn.btn-default.navbar-btn.navbar-left(type='button')
 				span.glyphicon.glyphicon-floppy-save
 
