Splitted glossary into separate view, some naming

--- a/app/views/story/templates/edit.jade
+++ b/app/views/story/templates/edit.jade
@@ -16,13 +16,13 @@
 					.col-sm-10
 						textarea#us-description.form-control(rows=3, placeholder='Beschreibung')
 				.form-group
-					label.control-label.col-sm-2(for='us-acceptanceTerms') Abnahme
+					label.control-label.col-sm-2(for='us-requirements') Abnahme
 					.col-sm-10
-						textarea#us-acceptanceTerms.form-control(rows=3, placeholder='Abnahme')
+						textarea#us-requirements.form-control(rows=3, placeholder='Abnahme')
 				.form-group
-					label.control-label.col-sm-2(for='us-scenario') Demo
+					label.control-label.col-sm-2(for='us-process') Demo
 					.col-sm-10
-						textarea#us-scenario.form-control(rows=3, placeholder='Demo')
+						textarea#us-process.form-control(rows=3, placeholder='Demo')
 				.form-group
 					label.control-label.col-sm-2(for='us-notes') Notizen
 					.col-sm-10
