--- a/app/views/story/templates/list.jade
+++ b/app/views/story/templates/list.jade
@@ -1,22 +1,9 @@
 table.table.table-condensed.table-hover
 	thead
 		tr
-			th
-			th
-				| Name
-				a(href='#remark2')
-					sup 2
-			th Beschreibung
+			th(colspan=2) User Story
 			th Abnahme
-			th Demo
-			th
-				| Story Points
-				a(href='#remark1')
-					sup 1
-				sup ,
-				a(href='#remark3')
-					sup 3
-			th Sprint
-			th.hidden-print Notizen
-			th Abhängig­keiten
+			th Ablauf
+			th Kommentare
+			th Story Points
 	tbody
