--- a/app/views/story/templates/edit.jade
+++ b/app/views/story/templates/edit.jade
@@ -24,9 +24,9 @@
 					.col-sm-10
 						textarea#us-process.form-control(rows=3, placeholder='Demo')
 				.form-group
-					label.control-label.col-sm-2(for='us-notes') Notizen
+					label.control-label.col-sm-2(for='us-comments') Kommentare
 					.col-sm-10
-						textarea#us-notes.form-control(rows=3, placeholder='Notizen')
+						textarea#us-comments.form-control(rows=3, placeholder='Kommentare')
 				.form-group
 					label.control-label.col-sm-2(for='us-dependencies') Abhängigkeiten
 					.col-sm-10
@@ -43,9 +43,12 @@
 					label.control-label.col-sm-2(for='us-sprint') Sprint
 					.col-sm-2
 						select#us-sprint.form-control
-							option 1
-							option 2
-							option 3
+							option(value='')
+								| Nicht zugewiesen
+							for sprint in locals.sprints || []
+								option(value=sprint.id)
+									| Sprint 
+									= sprint.id
 		.modal-footer
 			button.cancel.btn.btn-default(type='button', data-dismiss='modal') Abbrechen
 			button.save.btn.btn-primary(type='button') Speichern
