User Story sorting and such

--- a/app/views/story/templates/list-item.jade
+++ b/app/views/story/templates/list-item.jade
@@ -38,3 +38,12 @@ td
 		if locals.nonCommital
 			| 
 			span.glyphicon.glyphicon-comment(title='Unverbindliche Schätzung')
+td.action-bar.hidden-print
+	button.edit
+		span.glyphicon.glyphicon-edit
+	br
+	button.add
+		span.glyphicon.glyphicon-plus
+	br
+	button.remove
+		span.glyphicon.glyphicon-minus
