--- a/app/views/story/templates/list-item.jade
+++ b/app/views/story/templates/list-item.jade
@@ -2,15 +2,16 @@ td
 	| #
 	= locals.id
 td
-	b
-		= locals.name
-	| :
+	if (locals.name)
+		b
+			= locals.name
+		| :
 	= locals.description
 	br
 	if locals.sprint 
 		span.badge
 			| Sprint 
-			= sprint 
+			= sprint
 	for dependency, index in locals.dependencies || []
 		a.badge(href="#story" + dependency)
 			| #
@@ -31,10 +32,12 @@ td
 	if locals.points
 		= locals.points
 		| P
+		br
 		if locals.pointsShare
 			| (
 			= locals.pointsShare.toFixed(1)
 			| )
+			br
 		if locals.nonCommital
 			| 
 			span.glyphicon.glyphicon-comment(title='Unverbindliche Schätzung')
