--- a/app/views/styles/app.styl
+++ b/app/views/styles/app.styl
@@ -5,8 +5,13 @@
 	a:visited
 		text-decoration none
 
-	tr, td
-		page-break-inside avoid
+	.badge
+		font-size 7px
+		font-weight bold
+		text-align center
+		white-space nowrap
+		border 1px solid black
+		border-radius 8px
 
 .navbar-brand
 	img
