Adjust document title.

--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -4,7 +4,7 @@ html(lang='de')
 		meta(charset='utf-8')
 		meta(name='viewport', content='width=device-width, initial-scale=1')
 		meta(name='google', content='notranslate')
-		title Backlog.js
+		title Backlog
 		link(rel='shortcut icon', sizes='32x32', href='/images/icon-32.png')
 		link(rel='shortcut icon', sizes='128x128', href='/images/icon-128.png')
 		link(rel='stylesheet', href='css/app.css')
