--- a/app/views/templates/header.jade
+++ b/app/views/templates/header.jade
@@ -10,21 +10,8 @@ nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
 				= name
 
 		#navbar-collapse-1.navbar-collapse.collapse
-			button#save.btn.btn-default.navbar-btn.navbar-left(type='button')
+			button#save.btn.btn-default.navbar-btn(type='button')
 				span.glyphicon.glyphicon-floppy-save
-
-			ul.nav.navbar-nav.navbar-right
-				li.dropdown
-					a.dropdown-toggle(data-toggle="dropdown", href='#')
-						| Sprints
-						b.caret
-					ul.dropdown-menu
-						for sprint in sprints
-							li: a(href='#')
-								| Sprint 
-								= sprint.id
-				li
-					a(href='#glossary') Glossar
-
+			
 			form.navbar-form.navbar-right(role='search')
-				input.form-control(type='text', placeholder='Suche...')
+				input#search.form-control(type='text', placeholder='Suche...')
